--- a/D2/Übung2/style.css
+++ b/D2/Übung2/style.css
@@ -33,32 +33,41 @@
     length: 50%;
     padding: 1%;
     padding-right: 40px; 
+    border-color: rgb(47, 56, 241);
 }
 
 .footer {
-    margin-top: 15%;
-
+    margin-top: 18%;  
+  
 }
-
-
 
 .footer-content {
     display: flex;
-    justify-content: middle;
-    margin-left: 50%;
-    p:hover {
-        color: rgb(3, 3, 75);
-    }
+    justify-content: space-between;
+}
+
+.footer-left {
+    display: flex;
+    margin-left: 10%;
+}
+
+.footer-right {
+    display: flex;
+    margin-right: 10%;
 }
 
 .abstand {
+    margin-right: 10%;
+}
+
+.abstando {
     margin-left: 10%;
 }
 
 .header {
     margin-top:5%;
     .login{
-        background-color: rgb(232, 93, 93);
+        background-color: rgb(93, 100, 232);
         border-width: thin;
         border-color: rgb(78, 3, 3);
         border-radius: 6%;
@@ -91,4 +100,13 @@
     p:hover {
         color: rgb(3, 3, 75);
     }
+}
+
+.footercolor {
+    position: fixed;
+    bottom: 0;
+    width: 200%;
+    height: 8%;
+    background-color: rgb(238, 232, 232);
+    z-index: -1;
 }
