--- a/D3/Übung1/style.css
+++ b/D3/Übung1/style.css
@@ -1,12 +1,72 @@
-.centermiddle{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family:Arial, Helvetica, sans-serif
+body{
+    background-color: black;
+    color: white;
+    h1 {
+        font-size: 10vw;
+    }
 }
 
-.photos{
-    display: inline-block;
-    width: 20%;
+@media screen and (768px <= width <= 10000px) {
+	.centermiddle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family:Arial, Helvetica, sans-serif
+    }
+    
+    .photos{
+        display: inline-block;
+        width: 100%;
 
+    
+     
+    }
+    
+    .photos img{
+        width: 32%;
+    }
 }
+
+@media (max-width: 768px) {
+	.centermiddle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family:Arial, Helvetica, sans-serif
+    }
+    
+    .photos{
+        display: inline-block;
+        width: 100%;
+        
+    
+    
+    
+    }
+    
+    .photos img{
+        width: 49.6%;
+    }
+}
+
+@media (max-width: 480px) {
+	.centermiddle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family:Arial, Helvetica, sans-serif
+    }
+    
+    .photos{
+        display: inline-block;
+        width: 100%;
+    
+    
+    
+    }
+    
+    .photos img{
+        width: 100%;
+    }
+}
+
