--- a/Project/Code/Template/template.html
+++ b/Project/Code/Template/template.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <header>
+        <img src="RentAChild.png">
     <h1>Rent A Child</h1>
+    <footer>
+        <div class="cardacceptance">
+        <h1>We Accept</h1>
+    </div>
+    </footer>
 </header>
 </body>
 </html>
