--- a/Project/Code/Template/template.html
+++ b/Project/Code/Template/template.html
@@ -14,6 +14,9 @@
         <div class="cardacceptance">
         <h1>We Accept</h1>
     </div>
+    <div class="socials">
+        <h1>Contact Us!</h1>
+    </div>
     </footer>
 </header>
 </body>
