fixxing links centering in the middle the page

--- a/Project/Code/style.css
+++ b/Project/Code/style.css
@@ -278,3 +278,11 @@ button:hover {
     border-radius: 14%;
     object-fit: cover;
 }
+
+.login-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  margin-top: 5%;
+}
