--- a/Project/Code/style.css
+++ b/Project/Code/style.css
@@ -262,6 +262,10 @@ button:hover {
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
 }
 
+.forgot-password {
+    margin-top: 30px;
+}
+
 .image-grid {
     display: flex;
     flex-wrap: wrap;
