--- a/Project/Code/style.css
+++ b/Project/Code/style.css
@@ -58,7 +58,7 @@ body {
     padding: 0;
     display: flex;
     justify-content: center; 
-    margin-top:0.7%;
+    margin-top: 0.7%;
 }
 
 .header li {
@@ -228,10 +228,12 @@ button:hover {
 .car-details {
     display: flex; 
     align-items: start; 
+    flex-wrap: wrap;
+    padding: 20px;
 }
 
 .car-image img {
-    width: 70%; 
+    width: 100%; 
     height: auto; 
     display: block; 
     margin-top: 5%; 
@@ -242,13 +244,25 @@ button:hover {
     padding: 10px;
     text-align: left;
     display: block;
-    width: 50%;
+    width: 100%;
     margin-right: 2.5%;
 }
 
-.rent-button{
-    width: 90%;
-    margin-left: 7.5%;
+.rent-button {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #FFA500;
+    color: #FFF;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 20px;
+}
+
+.rent-button:hover {
+    background-color: #FFD700;
 }
 
 .car-card h3 {
@@ -286,11 +300,9 @@ button:hover {
     object-fit: cover;
 }
 
-
 .navbar-dark .navbar-nav .nav-link:hover {
     color: #FFD700;
 }
-
 
 @media (max-width: 768px) {
     .header a {
@@ -317,7 +329,14 @@ button:hover {
     .register-input-group {
         margin-left: -2%;
     }
-    
+
+    .car-details {
+        flex-direction: column;
+    }
+
+    .car-info, .car-image {
+        width: 100%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -346,7 +365,6 @@ button:hover {
         margin-left: -2%;
     }
 }
-
 
 .register-container {
     display: flex;
