--- a/scss/style.css
+++ b/scss/style.css
@@ -8,6 +8,8 @@ body {
   min-height: 100vh;
 }
 
+
+
 .main-content {
   text-align: center;
   padding: 100px 20px 50px 20px;
@@ -86,8 +88,7 @@ body {
   width: 100%;
   height: auto;
   flex-shrink: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   max-width: 100%;
 }
 
@@ -105,6 +106,7 @@ body {
     transform: translateX(0);
   }
 }
+
 .footer {
   text-align: center;
   padding: 20px 0;
@@ -206,8 +208,7 @@ body {
 .car-cards-container .car-card img {
   width: 100%;
   height: 200px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   display: block;
 }
 .car-cards-container .car-card h3 {
@@ -230,22 +231,45 @@ body {
   transition: background-color 0.3s;
   margin-top: 20px;
 }
-.car-cards-container .car-card .rent-button:hover {
+
+
+.rent-button {
+  border: none;
+  border-radius: 5px;
+  background-color: #FFA500;
+  color: #FFFFFF;
+  font-size: 16px;
+  cursor: pointer;
+  width: 50%;
+  padding: 10px;
+  margin-left: 30%;
+}
+.rent-button:hover {
   background-color: #FFD700;
 }
+
 .car-cards-container .car-details {
   display: flex;
   align-items: start;
   flex-wrap: wrap;
   padding: 20px;
 }
+
+
+.car-details img{
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+
 .car-cards-container .car-details .car-image img {
   width: 100%;
   height: auto;
   display: block;
-  margin-top: 5%;
-  margin-left: 5%;
 }
+
 .car-cards-container .car-details .car-info {
   padding: 10px;
   text-align: left;
@@ -270,8 +294,7 @@ body {
   width: 100%;
   height: auto;
   border-radius: 14%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
@@ -285,6 +308,11 @@ body {
   width: 100%;
   height: calc(100vh - 60px);
   margin-top: 60px;
+}
+
+
+.privacy {
+  margin-left: 11%;
 }
 .register-container .register-box {
   background-color: #04020f;
@@ -383,6 +411,8 @@ body {
   .register-box .register-input-row .register-input-group:last-child {
     margin-right: 0;
   }
+
+
 }
 @media (min-width: 768px) and (max-width: 1023px) {
   .register-box {
@@ -406,11 +436,13 @@ body {
   }
   .register-box .register-input-row .register-input-group {
     flex: 1;
-    max-width: 45%;
+    max-width: 40%;
   }
   .register-box .register-input-row .register-input-group:last-child {
     margin-right: 0;
   }
+
+  
 }
 @media (max-width: 768px) {
   .header a {
@@ -441,11 +473,13 @@ body {
   }
   .register-box .register-input-row .register-input-group {
     width: 100%;
-    margin-right: 0;
+
   }
   .register-input-group .register-input-group-checkbox {
     margin-left: -2%;
   }
+
+  
 }
 @media (max-width: 480px) {
   .header a {
@@ -467,4 +501,6 @@ body {
   .register-input-group .register-input-group-checkbox {
     margin-left: -2%;
   }
-}/*# sourceMappingURL=style.css.map */
+
+ 
+}
