--- a/scss/style.css
+++ b/scss/style.css
@@ -504,3 +504,21 @@ body {
 
  
 }
+
+
+/* video */
+
+.video-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
