--- a/scss/style.css
+++ b/scss/style.css
@@ -8,8 +8,6 @@ body {
   min-height: 100vh;
 }
 
-
-
 .main-content {
   text-align: center;
   padding: 100px 20px 50px 20px;
@@ -18,6 +16,7 @@ body {
   flex: 1;
   margin-top: 60px;
 }
+
 .main-content::before {
   content: "";
   position: absolute;
@@ -30,11 +29,13 @@ body {
   opacity: 0.2;
   z-index: -1;
 }
+
 .main-content h1 {
   font-size: 48px;
   color: #FFA500;
   margin-bottom: 20px;
 }
+
 .main-content p {
   font-size: 18px;
   margin-bottom: 40px;
@@ -50,6 +51,7 @@ body {
   top: 0;
   z-index: 1000;
 }
+
 .header ul {
   list-style-type: none;
   margin: 0;
@@ -58,15 +60,18 @@ body {
   justify-content: center;
   margin-top: 0.7%;
 }
+
 .header li {
   margin: 0 20px;
 }
+
 .header a {
   text-decoration: none;
   color: #FFA500;
   font-weight: bold;
   font-size: 18px;
 }
+
 .header a:hover {
   color: #FFD700;
 }
@@ -80,10 +85,12 @@ body {
   max-width: 600px;
   margin: 40px auto;
 }
+
 .carousel .carousel-inner {
   display: flex;
   animation: slide 25s infinite;
 }
+
 .carousel .carousel-inner img {
   width: 100%;
   height: auto;
@@ -113,17 +120,21 @@ body {
   background-color: #04020f;
   margin-top: auto;
 }
+
 .footer .social-media {
   margin-top: 20px;
 }
+
 .footer .social-media p {
   margin-bottom: 10px;
   font-size: 18px;
 }
+
 .footer .social-media .social-icons a {
   margin: 0 10px;
   display: inline-block;
 }
+
 .footer .social-media .social-icons img {
   width: 24px;
   height: 24px;
@@ -137,6 +148,7 @@ body {
   height: calc(100vh - 60px);
   margin-top: -60px;
 }
+
 .login-container .login-box {
   background-color: #04020f;
   padding: 40px 20px;
@@ -146,21 +158,25 @@ body {
   max-width: 500px;
   text-align: center;
 }
+
 .login-container .login-box h2 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #FFA500;
 }
+
 .login-container .login-box .input-group {
   margin-bottom: 20px;
   text-align: left;
   width: 100%;
 }
+
 .login-container .login-box .input-group label {
   display: block;
   margin-bottom: 5px;
   font-size: 14px;
 }
+
 .login-container .login-box .input-group input {
   width: 100%;
   padding: 10px;
@@ -170,6 +186,7 @@ body {
   color: #FFFFFF;
   font-size: 14px;
 }
+
 .login-container .login-box button {
   width: 104%;
   padding: 10px;
@@ -181,9 +198,11 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
+
 .login-container .login-box button:hover {
   background-color: #FFD700;
 }
+
 .login-container .login-box .forgot-password {
   margin-top: 30px;
 }
@@ -195,6 +214,7 @@ body {
   gap: 20px;
   padding: 50px 20px;
 }
+
 .car-cards-container .car-card {
   background-color: #04020f;
   border-radius: 10px;
@@ -205,20 +225,24 @@ body {
   max-width: 300px;
   text-align: center;
 }
+
 .car-cards-container .car-card img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   display: block;
 }
+
 .car-cards-container .car-card h3 {
   margin: 10px 0;
   color: #FFA500;
 }
+
 .car-cards-container .car-card:hover {
   transform: translateY(-10px);
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
 }
+
 .car-cards-container .car-card .rent-button {
   width: 100%;
   padding: 10px;
@@ -232,7 +256,6 @@ body {
   margin-top: 20px;
 }
 
-
 .rent-button {
   border: none;
   border-radius: 5px;
@@ -244,6 +267,7 @@ body {
   padding: 10px;
   margin-left: 30%;
 }
+
 .rent-button:hover {
   background-color: #FFD700;
 }
@@ -255,14 +279,12 @@ body {
   padding: 20px;
 }
 
-
-.car-details img{
+.car-details img {
   width: 80%;
   display: block;
   margin: 0 auto;
   margin-top: 20px;
 }
-
 
 .car-cards-container .car-details .car-image img {
   width: 100%;
@@ -278,6 +300,17 @@ body {
   margin-right: 2.5%;
 }
 
+
+.car-info {
+  padding: 20px;
+  text-align: left;
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  font-size: 2vh;
+}
+
 .image-grid {
   display: flex;
   flex-wrap: wrap;
@@ -285,11 +318,13 @@ body {
   gap: 20px;
   padding: 20px;
 }
+
 .image-grid .image-container {
   text-align: center;
   width: 90%;
   max-width: 400px;
 }
+
 .image-grid .image-container img {
   width: 100%;
   height: auto;
@@ -310,10 +345,10 @@ body {
   margin-top: 60px;
 }
 
-
 .privacy {
   margin-left: 11%;
 }
+
 .register-container .register-box {
   background-color: #04020f;
   padding: 40px 20px;
@@ -323,16 +358,19 @@ body {
   max-width: 800px;
   text-align: center;
 }
+
 .register-container .register-box h2 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #FFA500;
 }
+
 .register-container .register-box .register-input-group {
   margin-bottom: 20px;
   text-align: left;
   width: 100%;
 }
+
 .register-container .register-box .register-input-group input,
 .register-container .register-box .register-input-group select {
   width: 100%;
@@ -343,10 +381,12 @@ body {
   color: #FFFFFF;
   font-size: 14px;
 }
+
 .register-container .register-box .register-input-group input[type=radio] {
   width: auto;
   margin-right: 10px;
 }
+
 .register-container .register-box .register-button {
   width: 85%;
   padding: 10px;
@@ -359,19 +399,23 @@ body {
   transition: background-color 0.3s;
   margin-left: 5%;
 }
+
 .register-container .register-box .register-button:hover {
   background-color: #FFD700;
 }
+
 .register-container .register-box .register-input-row {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 45px;
 }
+
 .register-container .register-box .register-input-row .register-input-group {
   flex: 1;
   min-width: 45%;
 }
+
 .register-container .register-box .register-input-group-checkbox {
   display: flex;
   align-items: center;
@@ -379,6 +423,10 @@ body {
   max-width: none;
   width: 100%;
 }
+
+
+
+
 
 .sizeofdropdown {
   width: 103%;
@@ -411,9 +459,9 @@ body {
   .register-box .register-input-row .register-input-group:last-child {
     margin-right: 0;
   }
-
-
+  
 }
+
 @media (min-width: 768px) and (max-width: 1023px) {
   .register-box {
     display: flex;
@@ -444,6 +492,7 @@ body {
 
   
 }
+
 @media (max-width: 768px) {
   .header a {
     font-size: 16px;
@@ -473,14 +522,20 @@ body {
   }
   .register-box .register-input-row .register-input-group {
     width: 100%;
-
+    margin-bottom: 5px; 
+  }
+  .register-box .register-input-row .register-input-group:last-child {
+    margin-bottom: 0; 
   }
   .register-input-group .register-input-group-checkbox {
     margin-left: -2%;
   }
 
-  
+  .register-container .register-box .register-input-group {
+    margin-top: 2%;
+  }
 }
+
 @media (max-width: 480px) {
   .header a {
     font-size: 14px;
@@ -501,10 +556,27 @@ body {
   .register-input-group .register-input-group-checkbox {
     margin-left: -2%;
   }
+  .register-container .register-box .register-input-group {
+    margin-top: 5%;
+  }
 
- 
+  .register-container .register-box .gender-options {
+    margin-bottom: 45px; 
+  }
+   
+  .register-container .register-box .register-input-row .register-input-group {
+    margin-top: -10%;
+    
+  }
+  
+  .register-container .register-box {
+    margin-left: -4%;
+  }
+
+  .login-container .login-box {
+    margin-left: -5%;
+  }
 }
-
 
 /* video */
 
@@ -512,7 +584,7 @@ body {
   position: relative;
   overflow: hidden;
   width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  padding-top: 56.25%; 
 }
 
 .video-container video {
